refactored bmi to two decimals

--- a/bmicalculator.html
+++ b/bmicalculator.html
@@ -8,12 +8,12 @@
 	<h1>BMI Calculator</h1>
 	<form action="/bmicalculator" method="post">
 		<label for="weight">Weight</label>
-		<input type="text" id="weight" name="weight" placeholder="Enter weight in pounds">
+		<input type="text" id="weight" name="weight" placeholder="In pounds">
 		<br><br>
 		<label for="height">Height</label>
-		<input type="text" id="height" name="height" placeholder="Enter height in inches">
+		<input type="text" id="height" name="height" placeholder="In inches">
 		<br><br>
-		<button type="submit" name="Submit">Calculate</button>
+		<button type="submit" name="Submit">Calculate BMI</button>
 	</form>
 
 
